--- a/package.json
+++ b/package.json
@@ -9,12 +9,23 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@turf/turf": "^7.3.0",
+    "axios": "^1.13.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.554.0",
+    "maplibre-gl": "^5.13.0",
     "next": "16.0.3",
+    "proj4": "^2.20.2",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "shapefile": "^0.6.6",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/maplibre-gl": "^1.13.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
