--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tmcw/togeojson": "^7.1.2",
     "@turf/turf": "^7.3.0",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
@@ -21,7 +22,8 @@
     "react-dom": "19.2.0",
     "shapefile": "^0.6.6",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "xmldom": "^0.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
