--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "lucide-react": "^0.554.0",
     "maplibre-gl": "^5.13.0",
     "next": "16.0.3",
+    "next-themes": "^0.4.6",
     "proj4": "^2.20.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "shapefile": "^0.6.6",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "xmldom": "^0.6.0"
