--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tmcw/togeojson": "^7.1.2",
     "@turf/turf": "^7.3.0",
     "axios": "^1.13.2",
