--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "firebase": "^12.6.0",
     "firebase-admin": "^13.6.0",
+    "flatbush": "^4.5.0",
     "iconv-lite": "^0.7.0",
     "lucide-react": "^0.554.0",
     "maplibre-gl": "^5.13.0",
